[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neuflow-v2"
version = "1.0.0"
description = "NeuFlow v2"
requires-python = ">=3.8"
dependencies = [
    "torch",
    "torchvision",
    "timm",
    "numpy",
    "opencv-python"
]

[tool.setuptools]
# Map the root directory to find the package folders
package-dir = {"" = "."}
packages = ["NeuFlow", "backbone", "utils"]
